<resources>
    <string name="app_name">AppHuevos</string>
    <!--Login strings -->
    <string name="Email">Introduzca su correo electronico</string>

    <string name="pass">Introduzca su contraseña</string>

    <string name="registrarse">Pulsa aqui para registrarte</string>

    <string name="login">Entrar en la aplicacion</string>

    <!--Registro -->
    <string name="pass2">Introduzca de nuevo su contraseña</string>
    <string name="btnregistrarse">Registrarte</string>

    <!--Stings de la MainActivity -->
    <string name="btnAddHuevo">Añadir huevo</string>
    <string name="btnComprobarHuevos">Mostrar huevos</string>
    <string name="btnEliminarrHuevo">Eliminar huevo</string>
    <string name="btnSalirSesion">Cerrar Sesion</string>

    <!--Agregar huevos -->
    <string name="btnagregarHuevos">Agregar huevos</string>
    <string name="pesoHuevo">Peso Huevo:</string>
    <string name="fecha">Fecha insercion:</string>
    <string name="ColorHuevo">Color Huevo:</string>
    <string name="diametroAlturaHuevo">Altura Huevo:</string>
    <string name="diametroAnchoHuevo">Ancho Huevo:</string>

    <!-- Activity Mostrar Huevos-->
    <string name="titleBuscarHuevos">Que huevos buscas?</string>
    <string name="txvDia">Dia</string>
    <string name="btnCalendario">Indicar fecha</string>


</resources>

