<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_huevos_fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:gravity="center"
        android:layout_marginEnd="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnSalirSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762">


        <Button
            android:id="@+id/btnAddHuevo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/diseno_btn"
            android:gravity="center"
            android:text="@string/btnAddHuevo" />

        <Button
            android:id="@+id/btnComprobarHuevos"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/diseno_btn"
            android:text="@string/btnComprobarHuevos" />

        <Button
            android:id="@+id/btnEliminarrHuevo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/diseno_btn"
            android:text="@string/btnEliminarrHuevo" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSalirSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnSalirSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>